Fix: adding margin to staff figcaption to adjust spacing between staff image and name.

--- a/scss/libguides/_directory.scss
+++ b/scss/libguides/_directory.scss
@@ -36,3 +36,9 @@
     @extend %directory;
   }
 }
+
+// adjusting padding
+
+ .staff figcaption {
+    margin-block-start: 1rem;
+  }
